# coffee-rustviews

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Settings.toml  config.sample.json  config.sample.toml
src/: coffee_config.rs  gitlab_client.rs  lib.rs  main.rs  post_message.rs
