[package]
name = "coffee-rustviews"
version = "0.1.0"
authors = ["Raymundo Vásquez Ruiz <raymundo.vr@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
config = "0.11"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
httpmock = "0.5"